# MCP-Powered-AI-Project-Community-Assistant

./: .dockerignore  .env.example  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  pyproject.toml  test_upload_doc.txt
.playwright-mcp/: page-2026-07-05T20-24-16-720Z.yml  page-2026-07-05T20-25-12-517Z.yml  page-2026-07-05T20-26-00-638Z.yml  page-2026-07-05T20-27-23-594Z.yml  page-2026-07-05T20-27-58-958Z.yml  page-2026-07-05T20-28-07-380Z.yml  page-2026-07-05T20-30-14-110Z.yml  page-2026-07-05T20-30-23-312Z.yml  page-2026-07-05T20-30-46-551Z.yml  page-2026-07-05T20-31-00-871Z.yml  page-2026-07-05T20-31-11-110Z.yml  page-2026-07-05T20-31-24-627Z.yml  page-2026-07-05T20-31-34-489Z.yml  page-2026-07-05T20-31-38-953Z.yml  page-2026-07-05T20-31-57-041Z.yml
app/: main.py
app/agents/: basic_agent.py  graph.py  nodes_docs.py  nodes_github.py  nodes_issue.py  nodes_response.py  nodes_router.py  nodes_web.py  state.py
app/api/: files.py  github.py
app/mcp_server/: server.py
app/services/: doc_parser.py  embeddings.py  github_client.py  vector_store.py
app/tools/: doc_tools.py  github_tools.py  web_tools.py
frontend/: app.py
tests/: test_health.py
