[project]
name = "mcp-powered-ai-project-community-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.6",
    "mcp>=1.28.0",
    "pypdf>=6.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
